# agentic-qa-playwright-mcp

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint.yml
agent_browser/: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
agent_browser/agent/: __init__.py  browser.py  prompts.py  runner.py  tools.py  writer.py
auditoria-tests/: .env.example  .gitignore  requirements.txt
auditoria-tests/mcp/: playwright-mcp.config.json
auditoria-tests/pages/: auditoria_page.py  lista_auditorias_page.py  login_page.py
auditoria-tests/tests/: test_iniciar_auditoria.py
auditoria-tests/utils/: config.py
