[project]
name = "agentic-qa-playwright-mcp"
version = "0.1.0"
description = "AI-powered Playwright test generator — describe a user flow in plain text and get Page Object Model + pytest files"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["playwright", "testing", "llm", "ai", "automation", "page-object-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "playwright>=1.40.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
agentic-qa = "agent_browser.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["agent_browser"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line length — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["agent_browser"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
files = ["agent_browser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--browser chromium -v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.pip-audit]
requirement = "requirements.txt"

[dependency-groups]
dev = [
    "ruff>=0.9.10",
    "mypy>=1.16.0",
    "pip-audit>=2.9.0",
    "pre-commit>=4.0.0",
]
