[project]
name = "auditoria-tests"
version = "0.1.0"
description = "Gerador de testes Playwright via LLM"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "openai>=1.0.0",
]
